--- a/src/components/warmingTable/styles.module.scss
+++ b/src/components/warmingTable/styles.module.scss
@@ -9,6 +9,7 @@
     margin: auto;
     margin-bottom: 15px;
     margin-top: 15px;
+    max-width: 100%;
     width: 100%;
 
     .no-background {
