--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -25,6 +25,7 @@
     margin: auto;
     margin-left: auto;
     margin-top: 15px;
+    max-width: 100%;
     overflow: scroll;
     width: 100%;
 
